--- a/index.html
+++ b/index.html
@@ -1,106 +1,141 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Muffins</title>
-  <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+ <title>Mon CV</title>
+ <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@1,100&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ <script src="https://kit.fontawesome.com/143ba80977.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="style.css">
 </head>
-<body class="text-center">
+<!-- Button trigger modal -->
+      <button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#exampleModal">
+        Contact
+      </button>
 
-  <div class="line-transparent">
-    <div class="line-dark"></div>
-    <div class="line-medium"></div>
-    <div class="line-light"></div>
-  </div>
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <h3 class="color-white">Romane Bart</h3>
+              <p>romane.bartpro@gmail.com</p>
 
-  <div class="cadre margin-100px">
-    <h1 class="color-green">Les Muffins de Grand Mère</h1>
-    <h2 class="color-green">Fondants et croustillants</h2>
-    <img src="images/logo.png" alt="muffin" class="avatar">
-    <br>
-    <a href="https://www.marmiton.org/recettes/recette_muffins-tres-simples_166385.aspx" target="_blanck" class="btn-pink">En savoir plus</a>
-  </div>
-
-  <div class="cadre margin-100px">
-    <h3 class="color-green">Présentation</h3>
-    <p><b>Les muffins</b> sont de petits gâteaux individuels s'apparentant aux madeleines. Apparus au pays de Galles aux alentours du XIe siècle, ils sont très répandus dans les pays anglo-saxons, principalement aux États-Unis. Le principe caractéristique de fabrication des muffins consiste à préparer le mélange des ingrédients liquides et celui des ingrédients secs séparément, puis à mélanger rapidement et <i>grossièrement</i> les deux préparations. Contrairement aux cupcakes, les muffins n’ont jamais de glaçage.
-    <br>
-    Les muffins sont traditionnellement sucrés. On peut les retrouver au chocolat (avec des pépites de chocolat) ou nature, mais il existe de nombreuses autres variétés : fraise, banane, framboise, orange, vanille, myrtille ou bleuets, etc.
-    <br>
-    Il existe également des muffins salés, les English muffins ou muffins anglais, ressemblant à des sortes de petites crêpes très épaisses, faits à partir de pâte levée. Ces muffins salés sont quelquefois faits avec de la farine complète. Ils sont notamment employés comme base de la préparation des "œufs Bénédicte".</p>
-  </div>
-
-  <div class="cadre margin-100px">
-    <h3 class="color-green">La recette en vidéo</h3>
-    <iframe width="500" height="300" src="https://www.youtube.com/embed/fBuSNu2m3XA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
+            </div>
+            <div class="modal-footer">
+            </div>
+          </div>
+        </div>
+      </div>
 
 
-  <div class="display-flex margin-100px">
-
-    <div class="cadre text-left margin-right-30px">
-      <h4  class="color-green">Ingredients</h4>
-      <ul>
-        <li> 281 g de farine</li>
-        <li> 2 oeufs</li>
-        <li> 100 g de sucre</li>
-        <li> 150 ml de lait</li>
-        <li> 80 g de beurre (ou 8 cuillères à soupe d'huile)</li>
-        <li> 1 sachet de levure chimique</li>
-        <li> 1 sachet de sucre vanillé</li>
-        <li> 1 pincée de sel</li>
-        <li> Cannelle</li>
-        <li> Extrait de vanille</li>
-      </ul>
     </div>
-
-    <div class="cadre text-left">
-      <h4 class="color-green">Préparation</h4>
-      <ol>
-        <li>
-          <p><b>Etape 1</b> :
-            Dans un premier saladier : mélanger la farine, le sucre, le sel, le sucre vanillé et la levure.
-          </p>
-        </li>
-        <li>
-          <p><b>Etape 2</b> :
-            Dans un deuxième saladier : mélanger le lait, l'huile(ou beurre fondu) et les oeufs.
-          </p>
-        </li>
-        <li>
-          <p><b>Etape 3</b> :
-            Verser le contenu du second saladier dans le premier et remuer jusqu'à obtenir une pâte plutôt lisse. Laissez tout de même quelques petits grumeaux.
-          </p>
-        </li>
-        <li>
-          <p><b>Etape 4</b> :
-            Mettre au four 15 min à 180°C (thermostat 6)
-          </p>
-        </li>
-      </ol>
-    </div>
-
   </div>
 
-   <div class="cadre margin-100px">
-    <h3 class="color-green">Vos productions</h3>
-    <img src="images/production1.jpg" class="production">
-    <img src="images/production2.jpg" class="production">
-    <img src="images/production3.jpg" class="production">
-  </div>
+<body>
+<div class= "fond rose">
+<div class="line-transparent">
+<div class="line-hard"></div>
+<div class="line-medium"></div>
+<div class="line-light"></div>
+</div>	
+<div class="navbar">
+<div class="links">
+<div class= "link">
+<a href="https://www.instagram.com/romane_bart/" target="blank"style="color:#FFFFFF;">Instagram</a>
+<i class="fab fa-instagram"></i>
+</div>
+<div class= "link">
+<a href="mailto:romane.bartpro@gmail.com" target="_blanck"style="color:#FFFFFF;"><i class="fas fa-envelope"></i>Contact</a>
+</div>
+</div>
+</div>
 
+<h1>Romane Bart</h1>
+<h2>Bienvenue dans mon CV ! &#128540;</h2>
 
-  <div class="cadre margin-100px">
-    <h3 class="color-green">Une super adresse!</h3>
+<img src="images/romi.jpg" alt="romi">
+<br>
+<br>
+<a href="https://www.linkedin.com/in/romane-bart-588143191/" target="blank"style="color:#FFFFFF;font-family: 'Montserrat', sans-serif;">Découvrez mon LinkedIn en cliquant ici</a>
+<br>
+<br>
+<div class="fond-rose">
+<h3>Qui suis-je ?</h3>
+<p>
+Je m'appelle Romane, mais on m'appelle aussi Romi 
+<br>
+<br> J'ai 20 ans
+<br><h6>D'où je viens ?</h6>
+</p>
+<p>
+Je suis née aux Sables d'olonne, cette magnifique ville dont vous pourrez voir un aperçu juste en dessous :  
+<br>
+<br>
+<iframe width="480" height="295" src="https://www.youtube.com/embed/fmNPPT2dYBA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br> Je suis donc une jeune fille du bord de mer qui aime faire ses valises et visiter d'autres horizons. Mais ça vous allez le voir juste en dessous à travers mes études et mes expériences. 
+</ul>
+</div>
+</p>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13041.474820093155!2d-0.5832487286951241!3d44.85219723481029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55287775d28251%3A0xb91b4d5859c103ea!2sL&#39;Atelier%20du%2048!5e0!3m2!1sfr!2sfr!4v1589537373304!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<div class="fond-rose">
+<h4> Mes études </h4>
 
+<ul> 
+<li>J'ai obtenu un Bac Littéraire mention assez bien option européenne</li>
+<li> J'ai ensuite pris mes valises pour Bordeaux où j'ai étudié durant un an en classe préparatoire pour l'ENS</li>
+<li> J'ai validé ma première année de licence de droit</li>
+<li>Puis, j'ai changé de route vers celle qui m'épanouie aujourd'hui : la communication
+<br>
+Je suis actuellement étudiante à l'EFAP Bordeaux, une école de communication qui se situe ici : </li>
+</ul>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.5955909115523!2d-0.5737849844630032!3d44.850168579098444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527c83c300001%3A0x755af41fb0edfe48!2sEFAP%20Bordeaux%2C%20%C3%89cole%20des%20Nouveaux%20M%C3%A9tiers%20de%20la%20Communication!5e0!3m2!1sfr!2sfr!4v1592230448970!5m2!1sfr!2sfr" width="300" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+</div>
+<br>
+<div class="fond-rose">
 
-  </div>
+<h5> Mes expériences </h5>
+<ul>
+<li> J'ai effectué mon premier stage en communication à Berlin au sein de la marque Fabletics. </li>
+<li> J'ai eu pour mission de créer, développer et gérer un marché de micro-influenceurs Français. </li>
+<li> Un petit retour en image sur cette belle expérience peut être intéressant : </li>
+<br>
+<img src="images/fableticsfr.jpg" alt="fableticsfr">
+<img src="images/influenceuses.jpg" alt="influenceuses">
+<br>
+</ul>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<a class="typeform-share button btn-lg"style="color:#FFFFFF;font-family: 'Montserrat', sans-serif;" href="https://form.typeform.com/to/M41HqH63" data-mode="popup"target="_blank">Une question ? Entrons en contact !</a> 
+<script> 
+(function() { 
+var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
-
-
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(images/banner.jpg);">
+    <div class="container">
+      <h1 class="color-green">Romane Bart</h1>
+      <h2 class="color-green">N'hésitez plus à me contacter, connectons nous sur LinkedIn ?</h2>
+      <img src="images/romi1.jpg" alt="muffin" class="avatar">
+      <br>
+      <a href=https://www.linkedin.com/in/romane-bart-588143191/ target="_blanck"style="color:#FFFFFF;font-family: 'Montserrat', sans-serif;" class="btn-white">Mon LinkedIn</a>
+    </div>
+  </div>
+  <div class="modal-footer">
+<footer>
+  Merci d'avoir lu mon CV à bientôt j'espère !
+</footer> 
+</div>
 </html>
